# jaffle-shop

./: .gitignore  QUICK_START.md  README.md  TECH_EXERCISE_CHALLENGES.md  TECH_TEST_CHALLENGES.md  dbt_project.yml  pyproject.toml  sample_profiles.yml
models/bronze/: .gitkeep
models/gold/: .gitkeep
models/silver/: silver_models.yml
models/staging/: __sources.yml  stg_orders_deduplicated.sql  stg_products_deduplicated.sql  stg_products_parsed.sql
seeds/jaffle-data/: raw_order_audit_log.csv  raw_products.csv
