[tool.poetry]
name = "dataplatform_challenge"
version = "0.1.0"
description = "Poetry Project for dataplatform challenge"
authors = ["Phil Armstrong"]
package-mode = false

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

# This section specifies the dependencies for the project using Poetry.
# The version of each dependency can be specified using various formats:
# - Exact version: "1.0.0" specifies exactly version 1.0.0.
# - Version range: ">=1.0.0, <2.0.0" specifies any version between 1.0.0 (inclusive) and 2.0.0 (exclusive).
# - Caret (^) notation: "^1.9.0" specifies any version compatible with 1.9.0, i.e., >=1.9.0, <2.0.0.
# - Tilde (~) notation: "~1.9.0" specifies any version compatible with 1.9.x, i.e., >=1.9.0, <1.10.0.
# - Wildcard (*): "1.9.*" specifies any version starting with 1.9.
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dbt-core = "^1.8.0"
dbt-duckdb = "^1.8.0"
pip-audit = "^1.1.0"
duckdb = "^1.1.3"
sqlfluff = "^3.3.0"
sqlfluff-templater-dbt = "^3.3.0"
pyodbc = "^5.2.0"
python-dotenv = "^1.0.1"
jafgen = "^0.4.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



